--- a/src/app/ui/card/card.component.scss
+++ b/src/app/ui/card/card.component.scss
@@ -1,6 +1,6 @@
 .card {
   border-radius: var(--rd-xl);
-  padding: var(--sp-xl);
+  padding: var(--sp-2xl);
   font: var(--text-body-md);
 
   &--content {
@@ -28,7 +28,7 @@
   &--currency-converter {
     background-color: var(--color-canvas);
     color: var(--color-ink);
-    padding: var(--sp-lg);
+    padding: var(--sp-2xl);
     border: 1px solid var(--color-canvas-soft);
     box-shadow: var(--shadow-card);
   }
